kubernetes/superstellar.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: superstellar-backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: superstellar-backend
    spec:
      containers:
      - name: superstellar-backend
        image: gcr.io/kubernetes-playground-195112/superstellar-backend:1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: superstellar-backend-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: superstellar-backend
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: superstellar-frontend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: superstellar-frontend
    spec:
      containers:
      - name: superstellar-frontend
        image: gcr.io/kubernetes-playground-195112/superstellar-frontend:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: superstellar-frontend-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: superstellar-frontend
---
